add report lab_05

--- a/lab_05/report/03-intro-iodata.tex
+++ b/lab_05/report/03-intro-iodata.tex
@@ -5,10 +5,10 @@
 \end{center}
 \addcontentsline{toc}{section}{\MakeUppercase{Введение}} % Добавляем в оглавление с заглавными буквами
 
-В современных вычислительных системах параллельные вычисления играют важную роль в повышении производительности программного обеспечения. Одним из основных методов организации параллелизма является использование нативных потоков операционной системы (OS threads), которые позволяют распределять выполнение задач между несколькими ядрами процессора.
+В современных вычислительных системах организация параллельных вычислений играет ключевую роль в повышении производительности программного обеспечения. Одним из эффективных методов структурирования параллельных вычислений является конвейерный принцип, при котором задача делится на несколько последовательных этапов. Каждый этап выполняется в отдельном потоке, позволяя системе одновременно обрабатывать разные части задачи на разных уровнях конвейера. Такой подход особенно полезен для задач с последовательными стадиями обработки данных, поскольку он позволяет распределить выполнение между несколькими ядрами процессора, минимизируя время простоя и повышая общую производительность программы.
 \vspace{0.25cm}
 
-Цель работы: получение навыка организации параллельных вычислений на основе нативных потоков.
+Цель работы: получение навыка организации параллельных вычислений по конвейерному принципу.
 
 \vspace{0.25cm}
 Для достижения этой цели были поставлены следующие задачи:
@@ -26,10 +26,10 @@
 \section{Входные и выходные данные}
 
 \hspace{1.25cm}
-Входными данными для ПО является адрес главной страницы ресурса. Выходные данные --- директория с файлами, которые содержат скачанные данные со страниц в формате, пригодном для дальнейшей обработки (html), а также время работы.
+Входными данными для ПО является папка data, содержащая html файлы со сказанными кулинарными страницами. Выходные данные --- база данных с таблицами, содаржащими рецепты, ингредиенты для них и шаги по приготовлению. Также программа делает замеры времени для получения максимального, минимального, среднего и медианного времён нахождения в очередях 2 и 3 и обработки на трёх стадиях.
 
 % Преобразование входных данных в выходные
 \section{Преобразование входных данных в выходные}
 
 \hspace{1.25cm}
-Программа считывает URL-адреса из файла, загружает содержимое страниц и сохраняет их локально как файлы. Для каждого URL создаётся поток, который обрабатывает загрузку и запись данных. Имена файлов формируются на основе URL с заменой недопустимых символов.
+Программа запускает 5 потоков, каждый из которых выполняет свою последовательную часть обработки заявки. Первый поток создаёт задачи с путями к файлам из папки data и помещает их в первую очередь.  Второй поток берёт заявки из первой очереди, читает файлы и дополняет заявки недостающими данными о рецептах, затем помещает задачу во вторую очередь. Третий поток берёт заявку из второй очереди, очищает выбранные из файла данные от html символов и помещает задачу в третью очередь. Четвёртый поток берёт заявки из третьей очереди, записывает данные из неё в таблицы базы данных и помещает задачу в четвёртую очередь. Пятый поток берёт заявки из четвёртой очереди и вычисляет максимальное, минимальное, среднее и медианное времена нахождения в очередях 2 и 3 и обработки на предыдущих трёх стадиях, попутно уничтожая заявки. Таким образом программа реализует параллельные вычисления по конвейерному принципу.~\cite{appmaster}
