--- a/lab_05/report/10-examples.tex
+++ b/lab_05/report/10-examples.tex
@@ -2,7 +2,7 @@
 \section{Примеры работы программы}
 
 \hspace{1.25cm}
-На рисунке~\ref{fig:img_example} представлен пример работы программы: запуск замеров времени на разном количестве потоков и отдельно на 5 потоках для 100 ссылок с сайта kedem.ru.
+На рисунке~\ref{fig:img_example} представлен пример работы программы с получившейся базой данных (рецепты были взяты с сайта kedem.ru и загружены программой из лабораторной работы №4).
 
 \begin{figure}[h]
     \centering
