--- a/lab_05/report/11-tests.tex
+++ b/lab_05/report/11-tests.tex
@@ -10,20 +10,14 @@
     \label{tab:tests}
     \begin{tabularx}{\textwidth}{|c|X|X|c|}
         \hline
-        № теста & Входные данные                                  & Ожидаемые выходные данные                                                  & Успешность \\ \hline
-        1       & Файл `links.txt` не существует                  & Программа выводит ошибку: "Не удалось открыть файл"                        & Ошибка (1) \\ \hline
-        2       & Файл `links.txt` пуст                           & Программа выводит: "Нет доступных URL для обработки."                      & Ошибка (2) \\ \hline
-        3       & Файл `links.txt` содержит 1 URL                 & Программа успешно загружает страницу на 1 потоке и выводит время загрузки  & Успех      \\ \hline
-        4       & Файл `links.txt` содержит 1000 URL              & Программа корректно загружает все страницы в многопоточном режиме          & Успех      \\ \hline
-        5       & Недопустимые символы в URL                      & Программа корректно заменяет недопустимые символы в именах файлов          & Успех      \\ \hline
-        6       & Ввод числа потоков больше числа URL             & Программа выводит ошибку и запрашивает корректное число потоков            & Ошибка     \\ \hline
-        7       & Ввод несуществующего пункта меню                & Программа выводит: "Неверный пункт меню. Попробуйте снова."                & Ошибка     \\ \hline
-        8       & Файл уже обработан, повторный запуск загрузки   & Программа корректно завершает работу без повторной загрузки                & Успех      \\ \hline
-        9       & URL превышает максимальную длину                & Программа корректно обрабатывает или игнорирует длинный URL                & Успех      \\ \hline
-        10      & Папка `data` уже существует                     & Программа сохраняет страницы в существующую папку без ошибок               & Успех      \\ \hline
+        № теста & Входные данные                                  & Ожидаемые выходные данные                                                  & Успешность теста \\ \hline
+        1       & Папка с файлами, структура данных корректна    & Заявки успешно добавлены в очередь 1, корректная обработка данных           & Успешно    \\ \hline
+        2       & Пустая папка                                    & Нет заявок для обработки, программа завершает работу без ошибок           & Успешно    \\ \hline
+        3       & Некорректный формат данных в файле (HTML)        & Программа игнорирует файл, продолжает обработку остальных задач           & Успешно    \\ \hline
+        4       & Папка с файлами, корректная структура данных   & Заявки корректно проходят через очереди, данные записываются в БД         & Успешно    \\ \hline
+        5       & Большое количество файлов (параллельная обработка) & Все файлы обрабатываются в многозадачном режиме, результаты записываются в БД  & Успешно    \\ \hline
+        6       & Проблемы с подключением к БД                    & Программа выводит ошибку подключения и завершает работу                    & Успешно    \\ \hline
+        7       & Недостаток памяти (искусственно)                & Программа корректно обрабатывает ошибку выделения памяти                   & Успешно    \\ \hline
+        8       & Неожиданное завершение потока                    & Программа завершает работу с выводом ошибок при некорректной работе потока  & Успешно    \\ \hline
     \end{tabularx}
 \end{table}
-
-Файл `links.txt` со списком ссылок для обработки.
-
-Данные выводятся в папку `data`.
