--- a/lab_05/report/13-conclusion.tex
+++ b/lab_05/report/13-conclusion.tex
@@ -4,7 +4,7 @@
 \end{center}
 \addcontentsline{toc}{section}{\MakeUppercase{Заключение}} % Добавляем в оглавление
 
-В результате выполнения лабораторной работы были получены навыки организации параллельных вычислений на основе нативных потоков.
+В результате выполнения лабораторной работы были получены навыки организации параллельных вычислений по конвейерному принципу.
 
 \vspace{0.25cm}
 В частности:
@@ -21,10 +21,10 @@
 
 \end{enumerate}
 
-В ходе лабораторной работы был рассмотрен, спроектированн и запрограммирован алгоритм загрузки страниц с помощью нативных потоков.
+В ходе лабораторной работы был рассмотрен, спроектированн и запрограммирован алгоритм парсинга страниц и записи данных в базу с помощью нативных потоков по конвейерному принципу.
 
-Проведённые замеры времени выполнения программного обеспечения при использовании различного числа потоков показали значительное ускорение обработки данных. Эти результаты подтверждают эффективность подхода к параллельной обработке данных и показывают, что увеличение числа потоков приводит к улучшению производительности, особенно при наличии достаточного количества логических ядер. Наблюдаемое время выполнения на уровне 3.79 секунд при использовании 64 потоков также указывает на наличие эффекта насыщения, что подчёркивает необходимость оптимального выбора количества потоков для достижения максимальной производительности.
+Проведённые замеры времени обработки данных через потоки на разных стадиях показали, что врями чтение данных и их обработка на первых двух устройствах происходит быстрее, чем запись этих данных в хранилище. В связи с этим время нахождения в очереди к потоку загружающему данные в базу также больше, чем в очереди к потоку, занимающемуся выборкой данных.
 
-Таким образом, лабораторная работа не только обеспечила практические навыки в области работы с нативными потоками, но и подтвердила теоретические знания о преимуществах и ограничениях параллельных вычислений.
+Таким образом, лабораторная работа позволила не только освоить принципы организации параллельных вычислений по конвейерному принципу, но и на практике выявить узкие места в процессах обработки данных. Особенно это касается этапа записи данных в хранилище, который оказался значительно более ресурсоёмким и времязатратным по сравнению с другими этапами. Кроме того, проведённые эксперименты продемонстрировали эффективность использования многозадачности для ускорения обработки данных, что делает данное решение перспективным для применения в реальных системах, требующих обработки больших объёмов информации в режиме реального времени.
 
 \newpage
