--- a/lab_05/report/01-title.tex
+++ b/lab_05/report/01-title.tex
@@ -22,13 +22,13 @@
 	
 	
 	\begin{center}
-		\Large\textbf{Отчёт по лабораторной работе №4\\\hspace{2.25cm} по курсу «Анализ алгоритмов»}\newline
+		\Large\textbf{Отчёт по лабораторной работе №5\\\hspace{2.25cm} по курсу «Анализ алгоритмов»}\newline
 	\end{center}
 	
-	\noindent\textbf{Тема} $\underline{\text{Параллельные вычисления на основе нативных потоков}}$\newline\newline\newline
-	\noindent\textbf{Студент} $\underline{\text{Талышева О.Н.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
-	\noindent\textbf{Группа} $\underline{\text{ИУ7-55Б~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
-	\noindent\textbf{Преподаватели} $\underline{\text{Волкова Л.Л., Строганов Ю.В.~~~~~~~~~~~~~~~~~~~~~~}}$\newline
+	\noindent\textbf{Тема} $\underline{\text{Организация параллельных вычислений по конвейерному принципу}}$\newline\newline\newline
+	\noindent\textbf{Студент} $\underline{\text{Талышева О.Н.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
+	\noindent\textbf{Группа} $\underline{\text{ИУ7-55Б~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
+	\noindent\textbf{Преподаватели} $\underline{\text{Волкова Л.Л., Строганов Ю.В.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline
 	
 	\begin{center}
 		\vfill
