--- a/lab_05/report/20-sources.tex
+++ b/lab_05/report/20-sources.tex
@@ -9,13 +9,7 @@
 \bibitem{tetraquark}
 \textit{Методы парсинга данных на C++ и Python.} Tetraquark. [Электронный ресурс]. URL: \url{https://tetraquark.ru/archives/47} (дата обращения: 22.10.2024).
 
-\bibitem{metanit}
-\textit{Парсинг HTML и XML в C\#.} Metanit. [Электронный ресурс]. URL: \url{https://metanit.com/c/tutorial/11.1.php} (дата обращения: 22.10.2024).
-
-\bibitem{pythonru}
-\textit{Парсинг на Python с библиотекой Beautiful Soup.} PythonRu. [Электронный ресурс]. URL: \url{https://pythonru.com/biblioteki/parsing-na-python-s-beautiful-soup} (дата обращения: 22.10.2024).
-
-\bibitem{thecode}
-\textit{Парсинг с помощью Python.} The Code. [Электронный ресурс]. URL: \url{https://thecode.media/parsing-2/} (дата обращения: 23.10.2024).
+\bibitem{appmaster}
+AppMaster, \textit{Конвейерное программирование}, доступно по ссылке: \url{https://appmaster.io/ru/glossary/konveiernoe-programmirovanie}, дата обращения: 14 ноября 2024.
   
 \end{thebibliography}
