--- a/lab_05/report/03-intro-iodata.tex
+++ b/lab_05/report/03-intro-iodata.tex
@@ -26,7 +26,7 @@
 \section{Входные и выходные данные}
 
 \hspace{1.25cm}
-Входными данными для ПО является папка data, содержащая html файлы со сказанными кулинарными страницами. Выходные данные --- база данных с таблицами, содаржащими рецепты, ингредиенты для них и шаги по приготовлению. Также программа делает замеры времени для получения максимального, минимального, среднего и медианного времён нахождения в очередях 2 и 3 и обработки на трёх стадиях.
+Входными данными для ПО является папка data, содержащая html файлы со сказанными кулинарными страницами. Выходные данные --- база данных с таблицами, содержащими рецепты, ингредиенты для них и шаги по приготовлению. Также программа делает замеры времени для получения максимального, минимального, среднего и медианного времён нахождения в очередях 2 и 3 и обработки на трёх стадиях.
 
 % Преобразование входных данных в выходные
 \section{Преобразование входных данных в выходные}
