--- a/lab_05/report/13-conclusion.tex
+++ b/lab_05/report/13-conclusion.tex
@@ -21,10 +21,10 @@
 
 \end{enumerate}
 
-В ходе лабораторной работы был рассмотрен, спроектированн и запрограммирован алгоритм парсинга страниц и записи данных в базу с помощью нативных потоков по конвейерному принципу.
+В ходе лабораторной работы был рассмотрен, спроектирован и запрограммирован алгоритм парсинга страниц и записи данных в базу с помощью нативных потоков по конвейерному принципу.
 
-Проведённые замеры времени обработки данных через потоки на разных стадиях показали, что врями чтение данных и их обработка на первых двух устройствах происходит быстрее, чем запись этих данных в хранилище. В связи с этим время нахождения в очереди к потоку загружающему данные в базу также больше, чем в очереди к потоку, занимающемуся выборкой данных.
+Проведённые замеры времени обработки данных через потоки на разных стадиях показали, что чтение данных и их обработка на первых двух стадиях происходит быстрее, чем запись этих данных в хранилище. В связи с этим время нахождения в очереди к потоку загружающему данные в базу также больше, чем в очереди к потоку, занимающемуся выборкой данных.
 
-Таким образом, лабораторная работа позволила не только освоить принципы организации параллельных вычислений по конвейерному принципу, но и на практике выявить узкие места в процессах обработки данных. Особенно это касается этапа записи данных в хранилище, который оказался значительно более ресурсоёмким и времязатратным по сравнению с другими этапами. Кроме того, проведённые эксперименты продемонстрировали эффективность использования многозадачности для ускорения обработки данных, что делает данное решение перспективным для применения в реальных системах, требующих обработки больших объёмов информации в режиме реального времени.
+Таким образом, лабораторная работа позволила не только освоить принципы организации параллельных вычислений по конвейерному принципу, но и на практике выявить узкие места в процессах обработки данных. Особенно это касается этапа записи данных в хранилище, который оказался более времязатратным по сравнению с другими этапами. Кроме того, проведённые эксперименты продемонстрировали преимущества использования многозадачности для ускорения обработки данных, что делает данное решение перспективным для применения в реальных системах, требующих обработки больших объёмов информации в режиме реального времени.
 
 \newpage
