--- a/lab_05/report/20-sources.tex
+++ b/lab_05/report/20-sources.tex
@@ -10,6 +10,6 @@
 \textit{Методы парсинга данных на C++ и Python.} Tetraquark. [Электронный ресурс]. URL: \url{https://tetraquark.ru/archives/47} (дата обращения: 22.10.2024).
 
 \bibitem{appmaster}
-AppMaster, \textit{Конвейерное программирование}, доступно по ссылке: \url{https://appmaster.io/ru/glossary/konveiernoe-programmirovanie}, дата обращения: 14 ноября 2024.
+\textit{Конвейерное программирование.} AppMaster. [Электронный ресурс]. URL: \url{https://appmaster.io/ru/glossary/konveiernoe-programmirovanie} (дата обращения: 14.11.2024).
   
 \end{thebibliography}
